[package]
name = "basic_fail_mode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ui_test = { path = "../../.."}

[[test]]
name = "ui_tests"
harness = false

[[test]]
name = "run_file"
harness = true
