[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"

[dev-dependencies]
ui_test = { path = "../../.."}
tempfile = "3.3.0"

[[test]]
name = "ui_tests"
harness = false

[[test]]
name = "run_file"
harness = true
