[package]
name = "compile_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This fails
tested_crate = { path = "tested_crate" }

# This works
#tested_crate = { path = "../tested_crate", version = "0.1.0-dev" }

[dev-dependencies]
ui_test = { path = "../../.." }

[[test]]
name = "ui"
harness = false
